fix: pescaria listing